--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Chintan Golakiya</title>
+  </head>
 <body>
 <h1>Hello, I'm Chintan</h1>
 <p>I'm hosted with GitHub Pages.</p>
